compiler/testData/diagnostics/tests/incompleteCode/unresolvedOperation.fir.kt
fun foo(a: Int) {
    !<!UNRESOLVED_REFERENCE!>bbb<!>
    <!UNRESOLVED_REFERENCE!>bbb<!> + a
}
